# self-model

./: .gitignore  QUICKSTART_TUI.md  README.md  TUI_IMPLEMENTATION.md  demo_tui.py  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/attachments/: brainstorming-doc-with-chatgpt-12-15-2025.md
docs/: timeindex-spec.md
src/: __init__.py
src/selfmodel/: __init__.py  bootstrap.py  events.py  profile.py  query.py  repl.py  store.py  viz.py
src/selfmodel/llm/: __init__.py  config.py  providers.py  router.py
src/selfmodel/loops/: __init__.py  consolidation.py  instant.py  orchestrator.py  (+1 more)
src/timeindex/: __init__.py  index.py  types.py
src/vfs-discord/: __init__.py  provider.py  types.py
src/vfs-docker/: __init__.py  provider.py  types.py
src/vfs-dropbox/: __init__.py  provider.py  types.py
src/vfs-elasticsearch/: __init__.py  provider.py  types.py
src/vfs-figma/: __init__.py  provider.py  types.py
src/vfs-gdrive/: __init__.py  provider.py  types.py
src/vfs-github/: __init__.py  provider.py  types.py
src/vfs-gitlab/: __init__.py  provider.py  types.py
src/vfs-grafana/: __init__.py  provider.py  types.py
src/vfs-jira/: __init__.py  provider.py  types.py
src/vfs-k8s/: __init__.py  provider.py  types.py
src/vfs-linear/: __init__.py  provider.py  types.py
src/vfs-mongodb/: __init__.py  provider.py  types.py
src/vfs-notion/: __init__.py  provider.py  types.py
src/vfs-postgres/: __init__.py  provider.py  types.py
src/vfs-prometheus/: __init__.py  provider.py  types.py
src/vfs-redis/: __init__.py  provider.py  types.py
src/vfs-s3/: __init__.py  provider.py  types.py
src/vfs-slack/: __init__.py  provider.py  types.py
src/vfs-trello/: __init__.py  provider.py  types.py
src/vfsd/: __init__.py  base.py  cli.py  config.py  daemon.py  registry.py  types.py
tests/: conftest.py  test_events.py  test_integration.py  test_llm.py  test_query.py  test_selfmodel.py  test_store_utils.py  test_timeindex.py  test_viz.py
(+29 files in other folders)
